best-practices-cel/require-labels/.kyverno-test/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: require-labels
policies:
- ../require-labels.yaml
resources:
- resource.yaml
results:
- kind: Pod
  policy: require-labels
  resources:
  - badpod01
  - badpod02
  result: fail
  rule: check-for-labels
- kind: Pod
  policy: require-labels
  resources:
  - goodpod01
  - goodpod02
  result: pass
  rule: check-for-labels
